# TJEDuktape

./: .gitignore  README.md  imgui.ini
data/scripts/: Canvas2DtoWebGL.js  HBTree.js  facade.js  init.js  litegraph.js  polyfill.js  test.js
src/: entity.h  game.cpp  game.h  includes.h  input.h  main.cpp  register_things  scriptconsole.cpp  scriptconsole.h  scripts.cpp  scripts.h  utils.cpp  utils.h
src/extra/dtel-xhr-master/: .gitmodules  CMakeLists.txt  README.md
src/extra/dtel-xhr-master/example/: Example.cpp
src/extra/dtel-xhr-master/include/xhr/: XMLHttpRequest.h
src/extra/dukglue/: dukglue.h
src/extra/duktape/: duk_console.cpp  duk_console.h
src/extra/imgui-docking/: imgui_impl_sdl.cpp
src/extra/imgui-docking/examples/example_glfw_opengl2/: main.cpp
src/extra/imgui-docking/examples/example_sdl_opengl3/Debug/example_.BBAEB705.tlog/: CL.read.1.tlog  example_sdl_opengl3.lastbuildstate
src/extra/imgui-docking/examples/example_win32_directx12/Debug/: vc142.idb
src/extra/imgui-docking/examples/example_win32_directx12/Debug/example_.b4cf9797.tlog/: CL.write.1.tlog
src/extra/remoteimgui-master/src/app/: imgui_remote.h
src/extra/remoteimgui-master/src/app/example/: main.cpp  remote_example_vs2010_without_deps.sln  remote_example_vs2013_without_deps.sln
src/extra/remoteimgui-master/src/app/example/opengl_example/: opengl_example_vs2013.vcxproj  opengl_example_vs2013.vcxproj.filters  (+2 more)
src/extra/remoteimgui-master/src/app/imgui/: imgui_demo.cpp
visualstudio15/VS2015/: visualstudio.vcxproj  visualstudio.vcxproj.filters
(+10 files in other folders)
